# multibundles

./: .env.example  .gitignore  LAUNCH.md  README.md  package.json  shopify.app.toml
.claude/: settings.local.json
app/: shopify.server.ts
app/components/: UpgradeBanner.tsx
app/graphql/: inventory-queries.ts  market-queries.ts  metafield-mutations.ts  product-queries.ts
app/models/: bundle-component.server.ts  bundle.server.ts  market-override.server.ts  selectable-pool.server.ts  shop.server.ts  volume-tier.server.ts
app/routes/: app._index.tsx  app.billing.tsx  app.bundles.$id.pricing.tsx  app.bundles.$id.tsx  app.bundles._index.tsx  app.bundles.new.custom.tsx  app.bundles.new.fixed.tsx  app.bundles.new.mix-match.tsx  app.bundles.new.tsx  app.bundles.new.volume.tsx  app.settings.tsx  app.tsx  webhooks.app.subscriptions_update.tsx  webhooks.compliance.tsx  webhooks.inventory.update.tsx  webhooks.orders.create.tsx
app/services/: inventory.server.ts  market-pricing.server.ts  metafield-sync.server.ts  plan-gating.server.ts  pricing.server.ts
app/utils/: plans.ts  pricing.ts
extensions/cart-transform/: Cargo.toml  shopify.extension.toml
extensions/cart-transform/src/: main.rs  run.graphql  run.rs  test_custom.json  test_fixed.json  test_mix_match.json  test_mix_match_invalid.json  test_mixed_cart.json  test_no_bundle.json
extensions/volume-discount/: Cargo.toml  shopify.extension.toml
extensions/volume-discount/src/: main.rs  run.graphql  run.rs  test_volume_no_tier.json  test_volume_qty3.json
prisma/: schema.prisma  seed.ts
(+13 files in other folders)
