[package]
name = "volume-discount"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "volume_discount"
path = "src/run.rs"

[[bin]]
name = "function-runner"
path = "src/main.rs"

[dependencies]
shopify_function = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "symbols"
